kanban/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');

/* Dark Mode*/
.app-darkMode {
  font-size: calc(10px + 2vmin);
  background-color: #262626;  
  min-height: 100vh;
}

.app-darkMode .btn-addTask, .app-darkMode .txtarea-newTask, .app-darkMode .txt-columnName, .app-darkMode .txt-title {
  color: #ebebeb;
}

.app-darkMode .btn-addTask {
  background-color: #4c82cf;
}

.app-darkMode .btn-addTask:hover {
  background-color: #3c77c9;
}

.app-darkMode .column, .app-darkMode .txtarea-task {
  box-shadow: 2px 5px 5px #000000;
}

.app-darkMode .column, .app-darkMode .txt-columnName {
  background-color: #454545; 
}

.app-darkMode input[type="checkbox"] {
  background: #000000;
}

.app-darkMode input[type="checkbox"]:before {
  background: #ffffff;
}

.app-darkMode .txtarea-newTask {
  background-color: #5c5c5c;
}

.app-darkMode .txtarea-newTask:focus {
  box-shadow: 0px 0px 5px #000000;
}

.app-darkMode .txtarea-newTask::placeholder {
  color: #918c8c;
}

.app-darkMode .txtarea-task {
  background: #e6c800;
  color: #000000;
}

.app-darkMode .txt-title {
  background-color: #262626;
}

.app-darkMode .p-completedTime {
  color: #a1a1a1;
}

/* material design override */
button .material-icons {
  font-size: 18px;
  line-height: 1.5;
}

/* default page CSS */
body {
  font-family: 'Alata', sans-serif;
  text-align: center;
}

button {
  border: 0px;
  border-radius: 5px;
  color: #f7f7f7;
  cursor: pointer;
  font-size: 20px;
  margin: 5px;
}

input, textarea {
  color: #595959;
  -webkit-user-select: text;
  -khtml-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

input::placeholder, textarea::placeholder {
  color: #858585;
}

label {
  display: inline;
  font-size: 14px;
  position: absolute;
}

li:hover .btn-completeTask, li:hover .btn-deleteTask, li:hover .btn-nextArrow, li:hover .btn-prevArrow {
  display: inline-block;
  animation: fadeIn-animation 0.5s;
}

textarea {
  border-radius: 5px;
  line-height: 1.5;
  max-width:100%;
  width: 100%;
}

ul {
  list-style-type: none;
  margin: 0 auto;
  padding: 0;
}

ul li {
  margin-top: 5px;
}

*:focus {
  outline: none;
}

.app {
  background-color: #ffffff;  
  font-size: calc(10px + 2vmin);
  min-height: 100vh;
}

.btn-addColumn {
  background-color: #6366e6;
  border-radius: 50%;
  font-size: 30px;
  height: 50px;
  justify-self: center;
  padding: 0px;
  width: 50px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
}

.btn-addColumn:hover {
  background-color: #5459f0;
}

.btn-addTask {
  background-color: #6e95d4;
  border-style: none;
  margin: 10px 0px 10px 0px;
  width: 100%;
}

.btn-addTask:hover {
  background-color: #5788d9;
}

.btn-completeTask, .btn-deleteTask, .btn-nextArrow, .btn-prevArrow {
  display: none;
}

.btn-completeTask {
  background-color: #61b86d;
}

.btn-completeTask:hover {
  background-color: #2eb13f;
}

.btn-deleteColumn, .btn-deleteTask {
  background-color:  #ff674f;
}

.btn-deleteColumn, .btn-nextArrow {
  float: right;
}

.btn-deleteColumn:hover, .btn-deleteTask:hover {
  background-color: #ff4040;
}

.btn-nextArrow .material-icons:after {
  content: "\e315";
}

.btn-nextArrow, .btn-prevArrow {
  background-color: #92a6a5;
}

.btn-nextArrow:hover, .btn-prevArrow:hover {
  background-color: #627d7c;
}

.btn-prevArrow {
  float: left;
}

.btn-prevArrow .material-icons:after {
  content: "\e314"; 
}

.column {
  animation: fadeIn-animation 0.5s;
  background-color: #f2f2f2;
  border-radius: 10px;
  display: inline-block;
  margin: 20px;
  padding: 10px;
  position: relative;
  text-align: center;
  vertical-align: text-top;
  width: calc(90px + 15vw);
}

.column, .txtarea-newTask, .txtarea-task, .txt-columnName {
  box-sizing: border-box;
  -moz-box-sizing:    border-box;
  -webkit-box-sizing: border-box;
}

.column, .txtarea-task {
  box-shadow: 2px 5px 5px #999999;
}

.heading-noContent {
  color: #c2c2c2;
  font-size: calc(15px + 2vw);
  margin-top: 60px;
}

.menu {
  align-items: center;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.txtarea-newTask {
  background-color: #ffffff;
  border: 1px solid #000000;
  display: block;
  font-size: 20px;
}

.txtarea-newTask:focus {
  box-shadow: 0px 0px 5px #a6aff7;
}

.txtarea-task {
  animation: fadeIn-animation 0.5s;
  background-color: #ffe53d;
  font-size: 20px;
  resize: auto;
}

.txt-columnName, .txt-title {
  border-style: none;
  text-align: center;
}

.txt-columnName {
  background-color: #f2f2f2;
  font-size: calc(12px + 2vmin);
  width: 100%;
}

.txt-title {
  font-size: calc(25px + 2vw);
  margin-top: 15px;
  width: calc(100px + 20vw);
}

/* dark mode toggle button */
input:checked[type="checkbox"]:before {
  transform: translateX(50px);
} 

input[type="checkbox"] {
  background: #d6d6d6;
  cursor: pointer;
  height: 30px;
  position: relative;
  width: 80px;
  -webkit-appearance: none;
}

input[type="checkbox"]:before {
  background: #575151;
  border-radius: 20px;
  content: '';
  height: 35px;
  position: absolute; 
  top: -2px;
  transition: 0.5s;
  width: 35px; 
  z-index: 1;
}

.chk-darkMode {
  border-radius: 30px;
  justify-self: center;
}

.switch-container {
  display: inline-block;
  height: 60px;
  position: relative;
  width: 100px;
}

.switch-off-text, .switch-on-text{
  bottom: 32px;
  pointer-events: none;
}

.switch-off-text {
  right: 20px;
}

.switch-on-text {
  color: #d6d6d6;
  left: 20px;
}
/* dark mode toggle button end */

.p-completedTime {
  animation: fadeIn-animation 0.5s;
  font-size: 12px;
  margin: 0px 0px 15px 0px;
}

@keyframes fadeIn-animation {
  from {opacity: 0;}
  to {opacity:  1;}
}

@keyframes fadeOut-animation {
  from {opacity: 1;}
  to {opacity:  0;}
}

@media (min-width: 511px) and (max-width: 900px) {
  .column {
    width:calc(80px + 20vw);
  }
}

@media (min-width: 250px) and (max-width: 550px) {
  .column {
    width:calc(140px + 30vw);
  }

  li:hover .btn-nextArrow .material-icons:after {
    content: "\e313";
  }

  li:hover .btn-prevArrow .material-icons:after {
    content: "\e316";
  }
}

